src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Agency Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery Call</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Finalizing Closure</fullName>
        </values>
        <values>
            <fullName>Negotiating %26 Mutual Plan</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Validating Benefits</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Brand Direct Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery Call</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Finalizing Closure</fullName>
        </values>
        <values>
            <fullName>Negotiating %26 Mutual Plan</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Validating Benefits</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SaaS Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery Call</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Finalizing Closure</fullName>
        </values>
        <values>
            <fullName>Negotiating %26 Mutual Plan</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Validating Benefits</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccPaymentType__c</fullName>
        <formula>text(Account.DefaultPaymentType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type on Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Billing Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strike</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Rep</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <errorMessage>Opportunity Owner cannot be selected as Additional Rep. Please select another user.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Sales User,Sales Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <value>005U0000002Z1hC</value>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <infoMessage>To find the user type in at least one letter of the name in search field and click &apos;Go!&apos;</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>Account.Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_TrueView_Spend__c</fullName>
        <label>Annual TrueView Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Audit_Due_Date__c</fullName>
        <label>Audit Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingConditionName__c</fullName>
        <formula>BillingCondition__r.Name</formula>
        <label>Billing Condition Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCondition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Condition</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>BillingCondition__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BillingCondition__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrandAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand/Account</label>
        <referenceTo>Brand_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrandName__c</fullName>
        <formula>Brand__r.Name</formula>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Lift_Study__c</fullName>
        <label>Brand Lift Study</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BypassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSemailFromBrandAccount__c</fullName>
        <label>CSemailFromBrandAccount</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ClientServicesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Services Rep</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select user with Client Services profile.</errorMessage>
            <filterItems>
                <field>User.Client_Services_Rep__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ClientServiceOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_s_Ad_Account_Numbers__c</fullName>
        <label>Client&apos;s Ad Account Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_s_Biggest_Challenge_Details__c</fullName>
        <inlineHelpText>Talk about what pains are holding back the client from hitting their digital marketing goals here.</inlineHelpText>
        <label>Challenge Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_s_Biggest_Challenge__c</fullName>
        <inlineHelpText>Place the client&apos;s biggest challenge they are trying to overcome.</inlineHelpText>
        <label>Client&apos;s Biggest Challenge</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scale</fullName>
                </value>
                <value>
                    <fullName>Conversions</fullName>
                </value>
                <value>
                    <fullName>Finding Audiences</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Digital Strategy</fullName>
                </value>
                <value>
                    <fullName>Insufficient Technology</fullName>
                </value>
                <value>
                    <fullName>Personnel Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_s_Top_Priority_Details__c</fullName>
        <inlineHelpText>Explain further the context this goal has in the current business plan, structure, and market climate.</inlineHelpText>
        <label>Top Priority Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_s_Top_Priority__c</fullName>
        <inlineHelpText>Place the client&apos;s biggest business goal or win we are solving for here.</inlineHelpText>
        <label>Client&apos;s Top Priority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Awareness</fullName>
                </value>
                <value>
                    <fullName>App Downloads</fullName>
                </value>
                <value>
                    <fullName>CPL Based</fullName>
                </value>
                <value>
                    <fullName>Higher ROAS</fullName>
                </value>
                <value>
                    <fullName>Finding New Users</fullName>
                </value>
                <value>
                    <fullName>Purchases</fullName>
                </value>
                <value>
                    <fullName>Identifying High LTV customers</fullName>
                </value>
                <value>
                    <fullName>In-Store Visits</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_s_Vision_Mission__c</fullName>
        <label>Client&apos;s Vision/Mission</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date_1_Year__c</fullName>
        <formula>DATE(YEAR(CloseDate)-1, 
     MONTH(CloseDate), 
     IF(MONTH(CloseDate) = 2 &amp;&amp; DAY(CloseDate) = 29, DAY(CloseDate)-1, DAY(CloseDate))
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date -1 Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date_Year__c</fullName>
        <formula>YEAR(CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Technical Issues</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Not a fit</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Using competitor</fullName>
                </value>
                <value>
                    <fullName>Using Google</fullName>
                </value>
                <value>
                    <fullName>Contact left</fullName>
                </value>
                <value>
                    <fullName>Wrong Contact/Team</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Lost to Google</fullName>
                </value>
                <value>
                    <fullName>Campaign Cancelled</fullName>
                </value>
                <value>
                    <fullName>No Approval</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Description__c</fullName>
        <label>Competitor Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractStrikeID__c</fullName>
        <description>DO NOT DELETE - CONTRACTS UP TO 2/19/2016 STRIKE IDS</description>
        <label>ContractStrikeID - DO NOT DELETE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <formula>LEFT($User.Id,15) = LEFT(OwnerId,15) || LEFT($User.Id,15) = LEFT(Additional_Rep__c,15) || LEFT($User.Id,15) = LEFT(InsideSalesRep__c,15) || LEFT($User.Id,15) = LEFT(ClientServicesRep__c,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomXeroCampaignName__c</fullName>
        <label>Custom Xero Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Process__c</fullName>
        <label>Decision Making Process</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DefaultClientServicesRepEmail__c</fullName>
        <formula>BrandAccount__r.DefaultClientServicesRep__r.Email</formula>
        <label>Default Client Services Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultClientServicesRep__c</fullName>
        <formula>BrandAccount__r.DefaultClientServicesRep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Client Services Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultMargin__c</fullName>
        <formula>BillingCondition__r.Default_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DefaultPaymentType__c</fullName>
        <formula>TEXT(Account.DefaultPaymentType__c)</formula>
        <label>Default Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Notifications_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prevents any email notifications regarding this Opportunity to be sent out</inlineHelpText>
        <label>Email Notifications Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedRebate__c</fullName>
        <formula>BillingCondition__r.Rebate_Rate__c * (
  IF (CONTAINS(BillingCondition__r.Name, &apos;Instant Rebate&apos;),
    (Amount - Media_Spendings__c),
    IF (ISPICKVAL(Margin_Type__c, &apos;% of Media&apos;), Media_Spendings__c, Amount)  
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <formula>IF(ISPICKVAL(Account_Type__c,&quot;Client&quot;), 
             Amount - Media_Spendings__c,
             Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Features_Needed__c</fullName>
        <label>Features Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary KPI</fullName>
                </value>
                <value>
                    <fullName>First Party Targeting/CRM Ingestion</fullName>
                </value>
                <value>
                    <fullName>Frequency Cap</fullName>
                </value>
                <value>
                    <fullName>View Order</fullName>
                </value>
                <value>
                    <fullName>Bumper Ads</fullName>
                </value>
                <value>
                    <fullName>CPM Bidding</fullName>
                </value>
                <value>
                    <fullName>Salesforce Integration</fullName>
                </value>
                <value>
                    <fullName>Optimization History</fullName>
                </value>
                <value>
                    <fullName>Download Media Plan</fullName>
                </value>
                <value>
                    <fullName>Insights Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Features_Wanted__c</fullName>
        <label>Features Wanted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary KPI</fullName>
                </value>
                <value>
                    <fullName>First Party Targeting/CRM Ingestion</fullName>
                </value>
                <value>
                    <fullName>Frequency Cap</fullName>
                </value>
                <value>
                    <fullName>View Order</fullName>
                </value>
                <value>
                    <fullName>Bumper Ads</fullName>
                </value>
                <value>
                    <fullName>CPM Bidding</fullName>
                </value>
                <value>
                    <fullName>Salesforce Integration</fullName>
                </value>
                <value>
                    <fullName>Optimization History</fullName>
                </value>
                <value>
                    <fullName>Download Media Plan</fullName>
                </value>
                <value>
                    <fullName>Insights Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Negotiating_Considerations__c</fullName>
        <label>Final Negotiating Considerations</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flight_End__c</fullName>
        <inlineHelpText>The date that the campaign will finish.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Start__c</fullName>
        <inlineHelpText>The date that the campaign will start.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Further_Steps__c</fullName>
        <label>Further Steps</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <inlineHelpText>Fill in what Geo, Zip Code, etc we need for campaign targeting</inlineHelpText>
        <label>Geo</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>Amount - Media_Spendings__c - ExpectedRebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IO__c</fullName>
        <label>IO #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsideSalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Commission_Type__c</field>
                <operation>equals</operation>
                <value>Inside Sales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoicingType__c</fullName>
        <label>Invoicing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>One Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <inlineHelpText>Explain what the KPI means. What does the &quot;A&quot; mean in CPA (cost per acquisition)?</inlineHelpText>
        <label>KPI</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KPI_picklist__c</fullName>
        <label>KPI</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Time Savings</fullName>
                </value>
                <value>
                    <fullName>Margin/ROI</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese (simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (traditional)</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiedPlus1min__c</fullName>
        <formula>LastModifiedDate + 1/1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModified+1min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lost_Notes__c</fullName>
        <label>Lost Notes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Margin_Type__c</fullName>
        <label>Margin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% of Budget</fullName>
                    <default>true</default>
                    <label>% of Budget</label>
                </value>
                <value>
                    <fullName>% of Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Process_Type__c</fullName>
        <label>Media Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managed Service YouTube</fullName>
                </value>
                <value>
                    <fullName>Managed Service Social</fullName>
                </value>
                <value>
                    <fullName>Self Serve DBM YouTube</fullName>
                </value>
                <value>
                    <fullName>Self Serve Social</fullName>
                </value>
                <value>
                    <fullName>Self Serve Adwords YouTube</fullName>
                    <isActive>false</isActive>
                    <label>Self Serve Adwords YouTube</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Spendings__c</fullName>
        <formula>IF(ISPICKVAL(Margin_Type__c,&quot;% of Media&quot;),
   Amount / (1+Percent_Margin__c),
   Amount * (1-Percent_Margin__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Client Spend without our fee (media budget).</inlineHelpText>
        <label>Media Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MeetingDate__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MeetingNotes__c</fullName>
        <label>Meeting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MeetingStatus__c</fullName>
        <label>Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Short-Term Follow Up</fullName>
                </value>
                <value>
                    <fullName>Long-Term Follow Up</fullName>
                </value>
                <value>
                    <fullName>In-House/Self-Serve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Momentum__c</fullName>
        <label>Momentum</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yellow</fullName>
                    <default>true</default>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_Info__c</fullName>
        <label>More Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Negotiation_Notes__c</fullName>
        <label>Negotiation Notes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Existing_Client__c</fullName>
        <formula>IF( BrandAccount__r.ContractsClientSpend__c &gt; 0 , &quot;Existing&quot;, &quot;New&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New/Existing Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Salesforce_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Salesforce Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Commission_Profile__c.Salesforce_User__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Commission_Profile__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberOfPlatforms__c</fullName>
        <label>Number Of Platforms</label>
        <summaryForeignKey>OpportunityPlatform__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OppNumber__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>OppNumber</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>